# glazewm-switch

./: Cargo.toml  README.md  komoswitch.toml
src/: config.rs  glazewm.rs  komo.rs  main.rs
src/window/: mod.rs  settings.rs
