[package]
name = "glazewm-switch"
description = "A lightweight native Windows workspace switcher widget for GlazeWM that integrates directly into the taskbar"
version = "0.3.0"
edition = "2021"


[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
log = { version="0.4.27", features=["release_max_level_off"] }
windows = { version = "0.61.3", features = [
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "UI_ViewManagement"
] }
winsafe = { version = "0.0.25", features = ["user", "gdi"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
dirs = "6"
toml = "0.8"


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
